--- a/app/src/main/res/drawable/bg_btn_filter.xml
+++ b/app/src/main/res/drawable/bg_btn_filter.xml
@@ -2,5 +2,5 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:color="@color/white" android:width="1dp"/>
-    <solid android:color="@color/light_green"/>
+    <solid android:color="@color/primary_green"/>
 </shape>
