--- a/app/src/main/res/drawable/bg_input_message.xml
+++ b/app/src/main/res/drawable/bg_input_message.xml
@@ -2,5 +2,5 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="36dp"/>
-    <solid android:color="@color/light_green"/>
+    <solid android:color="@color/primary_green"/>
 </shape>
