--- a/app/src/main/res/layout/activity_check_compatibility.xml
+++ b/app/src/main/res/layout/activity_check_compatibility.xml
@@ -34,7 +34,7 @@
                 <androidx.appcompat.widget.Toolbar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/light_green"
+                    android:background="@color/primary_green"
                     app:layout_collapseMode="pin">
 
 
@@ -256,7 +256,7 @@
                             android:text="@{viewModel.suitableRecommend.suitableLever.recommendMessage}"
                             android:textSize="18sp"
                             android:textStyle="bold"
-                            android:textColor="@color/light_green"
+                            android:textColor="@color/primary_green"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
                         <TextView
