--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -11,7 +11,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/light_green"
+    android:background="@color/primary_green"
     tools:context=".uicontroler.fragment.AboutUsFragment">
 
     <LinearLayout
