--- a/app/src/main/res/layout/fragment_cancel_order.xml
+++ b/app/src/main/res/layout/fragment_cancel_order.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/light_green"
+        android:background="@color/primary_green"
         tools:context=".uicontroler.fragment.CancelOrderFragment">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -29,7 +29,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/light_green"
+                android:background="@color/primary_green"
                 app:layout_collapseMode="pin">
 
 
@@ -63,7 +63,7 @@
                             android:text="@string/cancel_order"
                             android:textAllCaps="false"
                             android:textColor="@color/white"
-                            android:textSize="30sp"
+                            android:textSize="25sp"
                             android:textStyle="bold" />
 
                         <androidx.constraintlayout.widget.ConstraintLayout
@@ -124,8 +124,10 @@
             <ImageView
                 android:layout_marginBottom="10dp"
                 android:id="@+id/img_like"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:tint="@color/white"
+                android:scaleType="fitCenter"
                 android:layout_gravity="center_horizontal"
                 android:contentDescription="@string/check_out"
                 android:src="@drawable/ic_app" />
