--- a/app/src/main/res/layout/fragment_cancel_order_confirm.xml
+++ b/app/src/main/res/layout/fragment_cancel_order_confirm.xml
@@ -5,7 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/light_green"
+        android:background="@color/primary_green"
         tools:context=".uicontroler.fragment.CancelOrderSuccessFragment">
         <LinearLayout
             android:layout_width="match_parent"
@@ -79,7 +79,7 @@
             android:id="@+id/continueShopping"
             android:textAllCaps="false"
             android:text="@string/continue_shopping"
-            android:textColor="@color/light_green"
+            android:textColor="@color/primary_green"
             android:background="@drawable/bg_detail_component"
             android:layout_marginHorizontal="20dp"
             android:layout_width="match_parent"
