--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -36,7 +36,7 @@
             <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appBarLayout"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:backgroundTint="@color/back_ground"
                 android:text="@string/app_name"
@@ -46,7 +46,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:background="@color/light_green">
+                    android:background="@color/primary_green">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -66,7 +66,6 @@
                                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                 android:layout_width="match_parent"
                                 android:layout_height="38dp"
-                                android:layout_marginEnd="50dp"
                                 android:text="@string/search"
                                 app:boxStrokeColor="@color/disable_pray"
                                 app:boxStrokeWidth="1dp"
@@ -87,14 +86,14 @@
                             </com.google.android.material.textfield.TextInputLayout>
 
 
-                            <ImageView
-                                android:id="@+id/img_notification"
-                                android:layout_width="38dp"
-                                android:layout_height="38dp"
-                                android:layout_alignParentEnd="true"
-                                android:layout_marginStart="10dp"
-                                android:contentDescription="@string/image"
-                                android:src="@drawable/ic__notifications" />
+<!--                            <ImageView-->
+<!--                                android:id="@+id/img_notification"-->
+<!--                                android:layout_width="38dp"-->
+<!--                                android:layout_height="38dp"-->
+<!--                                android:layout_alignParentEnd="true"-->
+<!--                                android:layout_marginStart="10dp"-->
+<!--                                android:contentDescription="@string/image"-->
+<!--                                android:src="@drawable/ic__notifications" />-->
                         </RelativeLayout>
 
                         <TextView
@@ -103,21 +102,12 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/toolBox"
                             android:layout_centerHorizontal="true"
-                            android:layout_marginTop="20dp"
+                            android:layout_marginTop="8dp"
                             android:text="@string/cart"
                             android:textColor="@color/white"
-                            android:textSize="30sp"
+                            android:textSize="25sp"
                             android:textStyle="bold" />
 
-                        <ImageView
-                            android:id="@+id/lnAboutUs"
-                            android:layout_width="160dp"
-                            android:layout_marginStart="-20dp"
-                            android:layout_height="20dp"
-                            android:layout_below="@+id/toolBox"
-                            android:layout_marginTop="7dp"
-                            android:contentDescription="@string/image"
-                            android:src="@drawable/ic_logo" />
                     </RelativeLayout>
                 </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.AppBarLayout>
@@ -205,7 +195,7 @@
                     android:background="@drawable/bg_button_checkout"
                     android:enabled="@{viewModel.checkOutEnable}"
                     android:text="@string/check_out"
-                    android:textStyle="bold" />
+                    android:textStyle="normal" />
             </LinearLayout>
         </RelativeLayout>
     </FrameLayout>
