--- a/app/src/main/res/layout/fragment_check_out.xml
+++ b/app/src/main/res/layout/fragment_check_out.xml
@@ -31,7 +31,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/light_green"
+                android:background="@color/primary_green"
                 app:layout_collapseMode="pin"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +106,7 @@
                     android:layout_alignParentEnd="true"
                     android:contentDescription="@string/edit"
                     android:src="@drawable/ic_pencil"
-                    app:tint="@color/light_green" />
+                    app:tint="@color/primary_green" />
             </RelativeLayout>
 
             <View
@@ -160,7 +160,7 @@
                     android:layout_alignParentEnd="true"
                     android:contentDescription="@string/cart"
                     android:src="@drawable/ic_cart"
-                    app:tint="@color/light_green" />
+                    app:tint="@color/primary_green" />
             </RelativeLayout>
 
             <View
