--- a/app/src/main/res/layout/fragment_choose_address.xml
+++ b/app/src/main/res/layout/fragment_choose_address.xml
@@ -30,7 +30,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/light_green"
+                android:background="@color/primary_green"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -47,7 +47,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         android:contentDescription="@string/image"
                         android:scaleType="centerCrop"
                         android:src="@drawable/ic_back_white" />
@@ -62,7 +62,7 @@
                         android:gravity="center"
                         android:text="@string/choose_address"
                         android:textColor="@color/white"
-                        android:textSize="30sp"
+                        android:textSize="25sp"
                         android:textStyle="bold" />
 
                     <ImageView
@@ -71,7 +71,7 @@
                         android:layout_height="26dp"
                         android:layout_alignParentEnd="true"
                         android:layout_gravity="bottom|left"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="3dp"
                         android:contentDescription="@string/image"
                         android:src="@drawable/ic_address_edit"
                         app:tint="@color/white"
@@ -85,7 +85,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
                         android:text="@string/default_address_guide"
-                        android:textColor="#272422"
+                        android:textColor="@color/white"
                         android:textSize="16sp" />
                 </RelativeLayout>
             </androidx.appcompat.widget.Toolbar>
@@ -121,6 +121,23 @@
                 android:text="@string/loading_failed_x_x"
                 android:textSize="20sp"
                 app:drawableTopCompat="@drawable/ic_empty" />
+
+            <TextView
+                android:visibility="@{(addressViewModel.status == status.Success &amp;&amp; addressViewModel.listAddress.size() == 0) ? view.VISIBLE: view.GONE}"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/black"
+                android:drawablePadding="10dp"
+                android:gravity="center"
+                android:text="@string/empty_address"
+                android:textSize="15sp"
+                app:drawableTopCompat="@drawable/ic_empty" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/chooseAddress"
                 chooseAddress="@{addressViewModel.listAddress}"
