--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,7 +66,7 @@
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="260dp"
+                        android:layout_height="170dp"
                         android:layout_marginTop="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +76,7 @@
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="match_parent"
-                            android:layout_height="250dp"
+                            android:layout_height="160dp"
                             android:layout_marginHorizontal="3dp"
                             android:layout_marginBottom="10dp"
                             app:cardCornerRadius="10dp"
@@ -102,69 +102,28 @@
                                     indicatorSize="@{viewModel.categories.size()}"
                                     android:layout_width="wrap_content"
                                     android:layout_height="15dp"
-                                    android:layout_marginTop="5dp"
+                                    android:layout_marginBottom="5dp"
                                     app:ci_drawable="@drawable/bg_cycle_indicator"
                                     app:ci_drawable_unselected="@drawable/bg_cycle_unselected_indicator"
+                                    app:layout_constraintBottom_toBottomOf="@+id/categoriesViewPager"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@id/categoriesViewPager" />
+                                    app:layout_constraintStart_toEndOf="@+id/categoryName" />
 
                                 <TextView
                                     android:id="@+id/categoryName"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginHorizontal="13dp"
                                     android:text="@{viewModel.displayCategory.name, default=APOSS}"
-                                    android:textAllCaps="true"
-                                    android:textColor="@color/black"
-                                    android:textFontWeight="@integer/material_motion_duration_long_2"
-                                    android:textSize="25sp"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/indicator" />
+                                    android:textAllCaps="false"
+                                    android:textColor="@color/white"
+                                    android:background="@color/primary_green"
+                                    android:paddingVertical="5dp"
+                                    android:paddingHorizontal="15dp"
+                                    android:textStyle="bold"
+                                    android:textSize="14sp"
+                                    app:layout_constraintBottom_toBottomOf="@+id/categoriesViewPager"
+                                    app:layout_constraintStart_toStartOf="parent" />
 
-                                <TextView
-                                    android:id="@+id/totalPurchase"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginHorizontal="13dp"
-                                    android:layout_marginTop="3dp"
-                                    android:text="@{viewModel.displayCategoryPurchase}"
-                                    android:textColor="@color/dark_pray"
-                                    android:textFontWeight="@integer/material_motion_duration_long_2"
-                                    android:textSize="13sp"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/categoryName" />
-
-                                <TextView
-                                    android:id="@+id/totalProduct"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginHorizontal="13dp"
-                                    android:layout_marginTop="3dp"
-                                    android:text="@{viewModel.displayCategoryProducts}"
-                                    android:textColor="@color/dark_pray"
-                                    android:textFontWeight="@integer/material_motion_duration_long_2"
-                                    android:textSize="13sp"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/categoryName" />
-
-                                <RatingBar
-                                    android:id="@+id/rating"
-                                    style="@style/Widget.AppCompat.RatingBar.Small"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginHorizontal="13dp"
-                                    android:layout_marginTop="4dp"
-                                    android:isIndicator="true"
-                                    android:numStars="5"
-                                    android:progressTint="@color/yellow"
-                                    android:rating="@{viewModel.displayCategory.rating}"
-                                    android:secondaryProgressTint="@color/yellow"
-                                    android:stepSize="0.5"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintTop_toBottomOf="@+id/categoryName" />
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
                         </androidx.cardview.widget.CardView>
@@ -173,7 +132,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="215dp">
+                    android:layout_height="180dp">
 
                     <TextView
                         android:id="@+id/ranking"
@@ -189,7 +148,7 @@
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardView2"
                         android:layout_width="match_parent"
-                        android:layout_height="160dp"
+                        android:layout_height="110dp"
                         android:layout_marginHorizontal="3dp"
                         android:layout_marginTop="5dp"
                         app:cardCornerRadius="10dp"
@@ -211,7 +170,7 @@
                         android:layout_height="35dp"
                         android:layout_marginStart="3dp"
                         android:layout_marginBottom="5dp"
-                        app:cardBackgroundColor="@color/light_green"
+                        app:cardBackgroundColor="@color/primary_green"
                         app:cardElevation="4dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent">
@@ -301,7 +260,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingVertical="10dp"
-                    android:background="@color/light_green">
+                    android:background="@color/primary_green">
 
                     <TextView
                         android:id="@+id/title"
@@ -309,19 +268,12 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="65dp"
+                        android:layout_marginTop="45dp"
                         android:text="@string/home"
                         android:textColor="@color/white"
-                        android:textSize="30sp"
+                        android:textSize="25sp"
                         android:textStyle="bold" />
 
-                    <ImageView
-                        android:id="@+id/lnAboutUs"
-                        android:layout_width="160dp"
-                        android:layout_height="20dp"
-                        android:layout_marginTop="40dp"
-                        android:contentDescription="@string/image"
-                        android:src="@drawable/ic_logo" />
                 </RelativeLayout>
 
                 <androidx.appcompat.widget.Toolbar
@@ -342,7 +294,7 @@
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                             android:layout_width="match_parent"
                             android:layout_height="38dp"
-                            android:layout_marginEnd="50dp"
+                            android:layout_marginEnd="0dp"
                             app:boxStrokeColor="@color/disable_pray"
                             app:boxStrokeWidth="1dp"
                             app:boxStrokeWidthFocused="2dp"
@@ -361,14 +313,6 @@
                                 android:textColor="@color/disable_pray" />
                         </com.google.android.material.textfield.TextInputLayout>
 
-                        <ImageView
-                            android:id="@+id/notification"
-                            android:layout_width="38dp"
-                            android:layout_height="38dp"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginStart="10dp"
-                            android:contentDescription="@string/image"
-                            android:src="@drawable/ic__notifications" />
                     </RelativeLayout>
                 </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
