--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,60 +11,44 @@
             type="com.example.aposs_buyer.viewmodel.SignInViewModel" />
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
+        android:background="@color/primary_green"
         android:layout_height="match_parent"
         tools:context=".uicontroler.fragment.LoginFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:background="@color/white"
             app:elevation="0dp">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="@string/app_name"
                     android:textAllCaps="true"
-                    android:textColor="@color/light_green"
+                    android:textColor="@color/white"
                     android:textSize="40sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="-10dp"
-                    android:text="@string/slogan"
-                    android:textAllCaps="true"
-                    android:textColor="@color/dark_pray" />
-            </LinearLayout>
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.appbar.AppBarLayout>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:contentDescription="@string/image"
-            android:scaleType="centerInside"
-            android:scaleX="1.1"
-            android:scaleY="1.1"
-            android:src="@drawable/bg_login_image" />
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="85dp"
-            android:background="@color/white"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
             <LinearLayout
@@ -194,11 +180,6 @@
                                     android:layout_height="42dp"
                                     android:background="@drawable/ic_google_login" />
 
-                                <androidx.appcompat.widget.AppCompatButton
-                                    android:layout_width="65dp"
-                                    android:layout_height="42dp"
-                                    android:layout_marginStart="10dp"
-                                    android:background="@drawable/ic_facebook_login" />
                             </LinearLayout>
 
                         </LinearLayout>
@@ -212,7 +193,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="@string/do_not_have_account"
-                    android:textColor="@color/dark_blue" />
+                    android:textColor="@color/white" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/signUp"
@@ -222,7 +203,7 @@
                     android:layout_marginTop="5dp"
                     android:background="@drawable/bg_ouline_login_button"
                     android:text="@string/sign_up"
-                    android:textColor="@color/dark_blue" />
+                    android:textColor="@color/white" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
