--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -37,7 +37,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/light_green"
+                android:background="@color/primary_green"
                 app:layout_collapseMode="pin">
 
 
@@ -73,7 +73,7 @@
                             android:text="@string/my_orders"
                             android:textAllCaps="false"
                             android:textColor="@color/white"
-                            android:textSize="30sp"
+                            android:textSize="25sp"
                             android:textStyle="bold" />
 
                         <androidx.constraintlayout.widget.ConstraintLayout
@@ -96,26 +96,7 @@
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toStartOf="parent" />
 
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="10dp"
-                                android:layout_height="10dp"
-                                android:background="@color/red"
-                                android:backgroundTint="@color/red"
-                                app:cardCornerRadius="10dp"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintTop_toTopOf="parent">
 
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:autoSizeMinTextSize="7sp"
-                                    android:gravity="center"
-                                    android:text="@string/defaultCartNumber"
-                                    android:textColor="@color/white"
-                                    android:textSize="7sp"
-                                    tools:ignore="SmallSp,SpUsage" />
-
-                            </androidx.cardview.widget.CardView>
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </RelativeLayout>
@@ -125,7 +106,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
                         android:text="@string/tap_to_view_detail"
-                        android:textColor="@color/dark_pray"
+                        android:textColor="@color/white"
                         android:textSize="16sp" />
                 </LinearLayout>
             </androidx.appcompat.widget.Toolbar>
@@ -203,7 +184,7 @@
             android:id="@+id/bottomBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/light_green"
+            android:background="@color/primary_green"
             app:itemIconTint="@color/white"
             app:itemRippleColor="@color/white"
             app:itemTextColor="@color/white"
