--- a/app/src/main/res/layout/fragment_user_detail.xml
+++ b/app/src/main/res/layout/fragment_user_detail.xml
@@ -39,14 +39,14 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    android:background="@color/light_green"
+                    android:background="@color/primary_green"
                     android:gravity="bottom"
                     android:orientation="vertical"/>
 
                 <androidx.appcompat.widget.Toolbar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/light_green"
+                    android:background="@color/primary_green"
                     app:layout_collapseMode="pin">
                     <LinearLayout
                         android:layout_width="match_parent"
