--- a/app/src/main/res/layout/item_order_delivering_state.xml
+++ b/app/src/main/res/layout/item_order_delivering_state.xml
@@ -13,7 +13,7 @@
             android:id="@+id/start"
             android:layout_marginStart="29dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:background="@color/light_green"
+            android:background="@color/primary_green"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="1dp"
             android:layout_height="10dp"/>
@@ -39,7 +39,7 @@
             android:layout_alignParentEnd="true"
             android:maxLines="2"
             android:text="@{orderDeliveringState.title}"
-            android:textColor="@color/light_green"
+            android:textColor="@color/primary_green"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -62,7 +62,7 @@
             android:layout_marginTop="41dp"
             android:layout_marginStart="29dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:background="@color/light_green"
+            android:background="@color/primary_green"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="1dp"
             android:layout_height="30dp"/>
