--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -36,7 +36,7 @@
                     android:id="@+id/cardImage"
                     android:layout_width="match_parent"
                     app:cardElevation="0dp"
-                    app:cardCornerRadius="0dp"
+                    app:cardCornerRadius="10dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
                     android:layout_marginTop="10dp"
@@ -70,7 +70,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="3dp"
                         android:ellipsize="end"
-                        android:maxLines="1"
+                        android:maxLines="2"
                         android:text="@{product.name}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/product_font_size" />
@@ -81,22 +81,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
                         android:text="@{product.priceToString()}"
-                        android:textColor="@color/active_button"
+                        android:textColor="@color/black"
                         android:textSize="@dimen/product_font_size"
                         android:textStyle="bold" />
 
-                    <RatingBar
-                        android:id="@+id/rating"
-                        style="@style/Widget.AppCompat.RatingBar.Small"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:isIndicator="true"
-                        android:numStars="5"
-                        android:progressTint="@color/yellow"
-                        android:rating="@{product.rating}"
-                        android:secondaryProgressTint="@color/yellow"
-                        android:stepSize="0.5" />
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
