--- a/app/src/main/res/layout/item_raking.xml
+++ b/app/src/main/res/layout/item_raking.xml
@@ -30,8 +30,8 @@
                     android:scaleType="centerCrop"
                     android:id="@+id/image"
                     android:src="@mipmap/ic_launcher_w"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
                     android:layout_margin="20dp"
                     android:layout_marginVertical="20dp"
                     android:contentDescription="@string/image"
@@ -51,16 +51,16 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
-                        android:maxLines="1"
+                        android:maxLines="2"
                         android:maxWidth="140dp"
                         android:ellipsize="end"
                         android:id="@+id/name"
-                        android:textStyle="bold"
+                        android:textStyle="normal"
                         android:textColor="@color/black"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{rankingProduct.name, default = Aposs}"
-                        android:textSize="@dimen/ranking_font_size" />
+                        android:textSize="@dimen/price_font_size" />
 
                     <TextView
                         android:id="@+id/price"
@@ -68,26 +68,13 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:text="@{rankingProduct.priceToString(), default =50000}"
-                        android:textColor="@color/active_button"
-                        android:textSize="@dimen/ranking_font_size"
+                        android:textColor="@color/secondary_orange"
+                        android:textSize="@dimen/price_font_size"
                         android:textStyle="bold" />
 
-                    <RatingBar
-                        android:id="@+id/rating"
-                        style="@style/Widget.AppCompat.RatingBar.Small"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:isIndicator="true"
-                        android:numStars="5"
-                        android:progressTint="@color/yellow"
-                        android:rating="@{rankingProduct.rating}"
-                        android:secondaryProgressTint="@color/yellow"
-                        android:stepSize="0.5"
-                        />
                     <TextView
                         android:layout_marginTop="5dp"
-                        android:textStyle="bold"
+                        android:textStyle="normal"
                         android:textColor="@color/dark_pray"
                         android:id="@+id/purchase"
                         android:layout_width="wrap_content"
