--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Apossbuyer" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="colorPrimary">@color/light_green</item>
+        <item name="colorPrimary">@color/primary_green</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/disable_pray</item>
@@ -13,7 +13,7 @@
         <!--     default text style-->
         <item name="android:textSize">14sp</item>
         <item name="android:screenOrientation">locked</item>
-        <item name="android:statusBarColor">@color/light_green</item>
+        <item name="android:statusBarColor">@color/primary_green</item>
         <item name="colorAccent">@color/yellow</item>
     </style>
 
