--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,10 +13,11 @@
     <color name="disable_pray">#ADADAD</color>
     <color name="active_button">#060DD9</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="light_green">#33A48F</color>
+    <color name="primary_green">#219653</color>
     <color name="back_ground">#F3F3FF</color>
     <color name="dark_pray">#707070</color>
     <color name="gray">#ABAFBC</color>
+    <color name="secondary_orange">#F2935D</color>
     <color name="light_gray">#F4F6FF</color>
     <color name="light_black">#4D5A80</color>
     <color name="border_color">#979797</color>
