--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="ranking_font_size">16sp</dimen>
+    <dimen name="ranking_font_size">14sp</dimen>
+    <dimen name="price_font_size">16sp</dimen>
     <dimen name="product_font_size">12sp</dimen>
     <dimen name="list_item_spacing">16dp</dimen>
     <dimen name="list_item_spacing_half">8dp</dimen>
